--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
       type="text/css"
     />
 
-    <title>ShopIT - Complete Ecommerce Project</title>
+    <title>SoftContAgro - Finca La Lolita</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
